--- a/views/layoutMaster.jade
+++ b/views/layoutMaster.jade
@@ -26,7 +26,7 @@ html
               div(id="menu").collapse.navbar-collapse
                 ul.nav.navbar-nav.navbar-right
                   li.active
-                    a(href="/users") Usuarios
+                    a(href="/users") Administraci&oacute;n
                   li
                     a(href="#service") Catalogos
                   li
