--- a/views/layoutAdmin.jade
+++ b/views/layoutAdmin.jade
@@ -19,7 +19,7 @@ html
     link(rel="stylesheet" href="../css/switchery/switchery.min.css")
 
     script(src="../js/jquery.min.js")
-    
+
   body.nav-md
     .container.body
       .main_container
@@ -49,7 +49,7 @@ html
                       span.fa.fa-chevron-down
                     ul(style="display: none").nav.child_menu
                       li.current-page
-                        a(href="#") Usuarios
+                        a(href="/users") Usuarios
                       li
                         a(href="#") Permisos
                       li
@@ -61,7 +61,7 @@ html
                       span.fa.fa-chevron-down
                     ul(style="display: none").nav.child_menu
                       li
-                        a(href="#") Reporte de usuarios
+                        a(href="/reports") Reporte de usuarios
                       li
                         a(href="#") Reporte de Pacientes
                       li
